添加tailscale防火墙配置

--- a/_posts/2025-04-02-校园网openwrt配置指南.md
+++ b/_posts/2025-04-02-校园网openwrt配置指南.md
@@ -125,3 +125,5 @@ acme.sh --info -d example.com
 tailscale up  --advertise-exit-node --advertise-routes 114.212.0.0/16
 ```
 然后在输出的 url 中完成登录。
+
+最后，如果需要在校园网外使用域名（解析到 WAN 口 IP）访问路由器和其他服务，需要为 tailscale 创建接口，配置防火墙区域并允许其和 WAN 区域的双向转发。
